fix: fix responsivity on mobile devices

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -25,7 +25,7 @@ a {
   background-image: url("/profile-a.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  border-radius: 2rem;
+  border-radius: 7rem;
   width: 15rem;
   height: 15rem;
   cursor: pointer;
